# FunctionalProgramming

./: FP-Project.cabal  Main.hs  README.md  Test.hs
