cabal-version:      2.4
name:               FP-Project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable learn-a-haskel
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.14.3.0
        , bytestring >=0.10.12.0
        , aeson >=2.0.1.0
        , aeson-pretty >=0.8.9
        , http-conduit >=2.3.8
        , text >= 1.2.5.0
        , zlib >= 0.6.2.3
    hs-source-dirs:   app
    default-language: Haskell2010